update with maintainers from PR comments

--- a/recipes/scikit-mdr/meta.yaml
+++ b/recipes/scikit-mdr/meta.yaml
@@ -53,8 +53,8 @@ about:
 extra:
   recipe-maintainers:
     - bollwyvl
-    - bryketos
-    - EpistasisLab
+    - lacava
     - pschmitt52
     - rhiever
+    - ryanurbs
     - weixuanfu
