--- a/recipes/skrebate/meta.yaml
+++ b/recipes/skrebate/meta.yaml
@@ -50,8 +50,8 @@ about:
 extra:
   recipe-maintainers:
     - bollwyvl
-    - bryketos
-    - EpistasisLab
+    - lacava
     - pschmitt52
     - rhiever
+    - ryanurbs
     - weixuanfu
