--- a/recipes/gawk/meta.yaml
+++ b/recipes/gawk/meta.yaml
@@ -30,6 +30,7 @@ about:
   summary: |
     a program that you can use to select particular records in a file and
     perform operations upon them.
+  doc_url: https://www.gnu.org/software/gawk/manual/gawk.html
   dev_url: http://savannah.gnu.org/projects/gawk/
 
 extra:
