--- a/recipes/xpdtools/meta.yaml
+++ b/recipes/xpdtools/meta.yaml
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: http://github.com/xpdAcq/{{ name }}/archive/v{{ version }}.tar.gz
+  url: http://github.com/xpdAcq/{{ name }}/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -26,7 +26,8 @@ requirements:
     - scipy
     - scikit-beam
     - pyyaml
-    - pyFAI
+    - pyfai
+    - streamz
     - fire
     - pims
     - fabio
