--- a/recipes/bluesky/meta.yaml
+++ b/recipes/bluesky/meta.yaml
@@ -44,7 +44,7 @@ test:
 
 about:
   home: https://github.com/NSLS-II/bluesky
-  license: BSD
+  license: BSD-3-clause
   license_family: BSD
   license_file: LICENSE
   summary: 'A Python data collection interface for experimental science'
