make check on *nix, best-effort (builds locally) on windows

--- a/recipes/gawk/meta.yaml
+++ b/recipes/gawk/meta.yaml
@@ -10,6 +10,8 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://ftp.gnu.org/gnu/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    - win.gawkmisc.patch  # [win]
 
 build:
   number: 0
@@ -17,10 +19,15 @@ build:
 requirements:
   build:
     - toolchain
+    - m2-coreutils  # [win]
+    - m2-patch  # [win]
+    - m2w64-toolchain  # [win]
+    - python  # [win]
 
 test:
   commands:
     - gawk --help
+    - awk --help
 
 about:
   home: https://www.gnu.org/software/gawk/
