just use python 3.6 on win build

--- a/recipes/gawk/meta.yaml
+++ b/recipes/gawk/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - m2-coreutils  # [win]
     - m2-patch  # [win]
     - m2w64-toolchain  # [win]
-    - python  # [win]
+    - python >=3.6,<3.7  # [win]
 
 test:
   commands:
