unpin windows python

--- a/recipes/gawk/meta.yaml
+++ b/recipes/gawk/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - toolchain
     - m2-patch  # [win]
     - m2w64-toolchain  # [win]
-    - python >=3.6,<3.7  # [win]
+    - python  # [win]
 
 test:
   commands:
