--- a/recipes/vaex-jupyter/meta.yaml
+++ b/recipes/vaex-jupyter/meta.yaml
@@ -35,6 +35,7 @@ test:
 
 about:
   home: https://www.github.com/maartenbreddels/vaex
+  doc_url: https://docs.vaex.io/
   license: MIT
   license_family: MIT
   license_file: LICENSE.txt
