update github repo to my own release

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "Adept" %}
-{% set version = "1.1.8c24824" %}
+{% set version = "1.1a" %}
 {% set build_number = "0" %}
-{% set sha256 = "827fc6f25fac1312b5e7431febb836814dc28945494128e46d0fb88b0d893a86" %}
+{% set sha256 = "fbe3e4d032bddaf361f1c2fe40263d802da0f4752dfe385a591d247a6d0f6627" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +9,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/rjhogan/Adept/archive/8c248244492fbc44f36450276d8c6bb6403556db.tar.gz
+  url: https://github.com/arghdos/Adept/releases/download/v1.1a/Adept-v11a.tar.gz
   sha256: {{ sha256 }}
 
 build:
