--- a/recipes/towncrier/meta.yaml
+++ b/recipes/towncrier/meta.yaml
@@ -15,6 +15,8 @@ build:
   noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  entry_points:
+    - towncrier = towncrier:_main
 
 requirements:
   build:
@@ -31,6 +33,8 @@ requirements:
 test:
   imports:
     - towncrier
+  commands:
+    - towncrier --help
 
 about:
   home: https://github.com/hawkowl/towncrier
