--- a/recipes/youtube_dl/meta.yaml
+++ b/recipes/youtube_dl/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "youtube_dl" %}
-{% set version = "2017.12.14" %}
+{% set version = "2017.12.31" %}
+{% set sha256 = "9c77afa1136de1f6b771b1d18d72d46954d340e2cdca125792fb25de72a6aad3" %}
 
 package:
   name: {{ name|replace('_', '-') }}
@@ -8,7 +9,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: "903530076ad6451ce20a01107b9a3d50203def7e5da015f92ec687ff077124d1"
+  sha256: {{ sha256 }}
 
 build:
   number: 0
@@ -38,8 +39,7 @@ about:
   license: Public Domain
   license_family: OTHER
   license_url: http://unlicense.org
-  # https://github.com/rg3/youtube-dl/issues/15054
-  # license_file: ''
+  license_file: LICENSE
   summary: YouTube video downloader
   description: |
       Command-line program to download videos from YouTube.com and other video sites
