--- a/recipes/example/meta.yaml
+++ b/recipes/example/meta.yaml
@@ -1,13 +1,6 @@
-# Note: there are many handy hints in comments in this example -- remove them when you've finalized your recipe
-
-# Jinja variables help maintain the recipe as you'll update the version only here.
-{% set name = "simplejson" %}
-{% set version = "3.8.2" %}
-{% set sha256 = "d58439c548433adcda98e695be53e526ba940a4b9c44fb9a05d92cd495cdd47f" %}
-# sha256 is the prefered checksum -- you can get it for a file with:
-#  `openssl sha256 <file name>`.
-# You may need the openssl package, available on conda-forge
-#  `conda install openssl -c conda-forge``
+{% set name = "papillon" %}
+{% set version = "0.0.8" %}
+{% set sha256 = "7505f977ed053b9eff70ba3a6a0787b227f36c419d8d742e3c74d09ebc7bc9c5" %}
 
 package:
   name: {{ name|lower }}
@@ -17,15 +10,15 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  
+  #My on pypi skeleton is:
+  #fn: '{{ name }}-{{ version }}.{{ file_ext }}'
+  #url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ file_ext }}
 
 build:
-  # Uncomment the following line if the package is pure python and the recipe is exactly the same for all platforms.
-  # See https://conda-forge.org/docs/meta.html#building-noarch-packages for more details.
-  # noarch: python
+  noarch: python
   number: 0
-  # If the installation is complex, or different between Unix and Windows, use separate bld.bat and build.sh files instead of this key.
-  # By default, the package will be built for the Python versions supported by conda-forge and for all major OSs.
-  # Add the line "skip: True  # [py<35]" (for example) to limit to Python 3.5 and newer, or "skip: True  # [not win]" to limit to Windows.
+  skip: True  # [py<35]
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -33,43 +26,27 @@ requirements:
     - python
     # When setuptools is available add the `--single-version-externally-managed --record record.txt` above.
     - setuptools
-    # if your project compiles code (such as a C extension) then add `toolchain` as a build requirement.
+    - pandas >=0.17.1
+    - seaborn >=0.8.1
   run:
     - python
+    - pandas >=0.17.1
+    - seaborn >=0.8.1
 
 test:
-  # Some package might need a `test/commands` key to check CLI.
-  # List all the packages/modules that `run_test.py` imports.
   imports:
-    - simplejson
-    - simplejson.tests
+    - papillon.test
 
 about:
-  home: http://github.com/simplejson/simplejson
-  # Remember to specify the license variants for BSD, Apache, GPL, and LGLP.
-  # Prefer the short version, e.g: GPL-2.0 instead of GNU General Public License version 2.0
-  # See https://opensource.org/licenses/alphabetical
-  license: MIT
-  # The license_family, i.e. "BSD" if license is "BSD-3-Clause". (optional)
-  license_family: MIT
-  # It is strongly encouraged to include a license file in the package,
-  # (even if the license doesn't require it) using the license_file entry.
-  # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
-  license_file: LICENSE.txt
-  summary: 'Simple, fast, extensible JSON encoder/decoder for Python'
+  home: https://github.com/domenico-somma/Papillon/
+  license: MPL-2.0
+  license_family: MPL
+  license_file: LICENSE
+  summary: 'A Python module to read and plot Galaxy RNA-seq data'
 
-  # The remaining entries in this section are optional, but recommended
-  description: |
-    simplejson is a simple, fast, complete, correct and extensible
-    JSON <http://json.org> encoder and decoder for Python 2.5+ and
-    Python 3.3+. It is pure Python code with no dependencies, but includes
-    an optional C extension for a serious speed boost.
-  doc_url: http://simplejson.readthedocs.io/
-  dev_url: https://github.com/simplejson/simplejson
+  doc_url: https://github.com/domenico-somma/Papillon/wiki/Manual
+  dev_url: https://github.com/domenico-somma/Papillon
 
 extra:
   recipe-maintainers:
-    # GitHub IDs for maintainers of the recipe.
-    # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
-    - LisaSimpson
-    - LandoCalrissian
+    - domenico-somma
