Removed unnecessary dependency and fixed yaml file according to hints.

--- a/recipes/impactutils/meta.yaml
+++ b/recipes/impactutils/meta.yaml
@@ -10,7 +10,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [not py35]
+  skip: True
   script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
@@ -18,7 +18,7 @@ requirements:
     - python
     - pip
   run:
-    - python >=3.4
+    - python
     - beautifulsoup4 >=4.4.0
     - cartopy >=0.14.0
     - fiona >=1.6.0
@@ -29,7 +29,6 @@ requirements:
     - pandas >=0.8.1
     - paramiko >=1.15.2
     - pycrypto >=2.6.1
-    - seaborn >=0.6.0
     - shapely >=1.5.11
 
 test:
@@ -42,6 +41,7 @@ about:
   license: Public Domain
   summary: 'Utility library for USGS earthquake applications.'
   license_family: Public Domain
+  license_file: LICENSE.md
 
 extra:
   recipe-maintainers:
