--- a/recipes/impactutils/meta.yaml
+++ b/recipes/impactutils/meta.yaml
@@ -10,7 +10,7 @@ source:
 
 build:
   number: 0
-  skip: True
+  skip: True # [py27]
   script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
