--- a/recipes/simage/meta.yaml
+++ b/recipes/simage/meta.yaml
@@ -33,6 +33,14 @@ requirements:
         - libpng
         - qt 5.*
 
+test:
+    requires:
+        - python {{ environ['PY_VER'] + '*' }}  # [win]
+        - cmake
+    files:
+        - CMakeLists.txt
+
+
 about:
     home: https://bitbucket.org/Coin3D/simage
     license: BSD 3-Clause
