removed comment and changed license family
Removed the comment # and added "--single-version-externally-managed --record record.txt" to python because I am using setuptools in the setup.py
changed license_family: from MPL to OTHER

--- a/recipes/papillon/meta.yaml
+++ b/recipes/papillon/meta.yaml
@@ -19,8 +19,7 @@ build:
 
 requirements:
   build:
-    - python
-    # When setuptools is available add the `--single-version-externally-managed --record record.txt` above.
+    - python -single-version-externally-managed --record record.txt
     - setuptools
     - pandas >=0.17.1
     - seaborn >=0.8.1
@@ -36,7 +35,7 @@ test:
 about:
   home: https://github.com/domenico-somma/Papillon/
   license: MPL-2.0
-  license_family: MPL
+  license_family: OTHER
   license_file: LICENSE
   summary: 'A Python module to read and plot Galaxy RNA-seq data'
 
