Use SP1 MFC update

--- a/recipes/vs2008_runtime/meta.yaml
+++ b/recipes/vs2008_runtime/meta.yaml
@@ -1,15 +1,11 @@
 package:
   name: vs2008_runtime
-  version: "9.0.30729.1"
+  version: "9.0.30729.6161"
 
 build:
   number: 0
   skip: true          # [not win]
   msvc_compiler: 9.0
-
-requirements:
-  build:
-    - cmake <3.9.2
 
 test:
   commands:
@@ -20,7 +16,7 @@ test:
         "vcomp90"
     ] %}
     {% for each_lib in libs %}
-    - if not exist "%PREFIX%\\Library\\{{ each_lib }}.dll" exit 1
+    - if not exist "%PREFIX%\\{{ each_lib }}.dll" exit 1
     - if not exist "%PREFIX%\\Library\\bin\\{{ each_lib }}.dll" exit 1
     {% endfor %}
 
