use another test for windows

--- a/recipes/simage/meta.yaml
+++ b/recipes/simage/meta.yaml
@@ -10,6 +10,7 @@ source:
 build:
     number: 0
     skip: true  # [py<35]
+    skip: true  # [osx]
 
     features:
         - vc14  # [win]
@@ -36,10 +37,11 @@ requirements:
 test:
     requires:
         - python {{ environ['PY_VER'] + '*' }}  # [win]
-        - cmake
+        - cmake  # [unix]
     files:
-        - CMakeLists.txt
-
+        - CMakeLists.txt  # [unix]
+    commands:
+        - where /r "%PREFIX%"  simage.dll  # [win]
 
 about:
     home: https://bitbucket.org/Coin3D/simage
