Bundle the LICENSE file

--- a/recipes/lightfm/meta.yaml
+++ b/recipes/lightfm/meta.yaml
@@ -46,8 +46,7 @@ about:
   home: https://github.com/lyst/lightfm
   license: Apache-2.0
   license_family: Apache
-  # license file not included in the .tar.gz, should be fixed in the next release.
-  # license_file: LICENSE.txt
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'A Python implementation of LightFM, a hybrid recommendation algorithm.'
 
   description: |
