--- a/recipes/example/meta.yaml
+++ b/recipes/example/meta.yaml
@@ -1,6 +1,7 @@
 # Note: there are many handy hints in comments in this example -- remove them when you've finalized your recipe
 
 # Jinja variables help maintain the recipe as you'll update the version only here.
+{% set org = "simplejson" %}
 {% set name = "simplejson" %}
 {% set version = "3.8.2" %}
 {% set sha256 = "d58439c548433adcda98e695be53e526ba940a4b9c44fb9a05d92cd495cdd47f" %}
@@ -16,6 +17,8 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  # If getting the source from GitHub uncomment this line and remove the one above
+  # url: https://github.com/{{ org }}/{{ name }}/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
