use template variables

--- a/recipes/coin3d/meta.yaml
+++ b/recipes/coin3d/meta.yaml
@@ -1,11 +1,16 @@
+{% set name = "coin3d" %}
+{% set version = "4.0.0" %}
+{% set sha256 = "8319cfa699afac0e5f19054222c25a7ad655f018f7c3c7b53f626e7b167cb08e" %}
+{% set download_url = "https://github.com/FreeCAD/pivy/releases/download/0.6.3/Coin3D-coin-8e8337f61b05.tar.gz" %}
+
 package:
-    name: coin3d
-    version: 4.0.0
+    name: {{ name }}
+    version: {{ version }}
 
 source:
-    fn: coin.tar.gz
-    url: https://github.com/FreeCAD/pivy/releases/download/0.6.3/Coin3D-coin-8e8337f61b05.tar.gz
-    sha256: 8319cfa699afac0e5f19054222c25a7ad655f018f7c3c7b53f626e7b167cb08e
+    fn: {{ name }}.tar.gz
+    url: {{ download_url }}
+    sha256: {{ sha256 }}
 
     patches:
         - include.patch
@@ -21,12 +26,10 @@ requirements:
         - gcc  # [linux]
         - cmake
         - boost-cpp
-        # - simage
     run:
         - vc 14  # [win]
         - libgcc  # [linux]
         - boost-cpp
-        # - simage
 
 test:
     requires:
