use template variables

--- a/recipes/simage/meta.yaml
+++ b/recipes/simage/meta.yaml
@@ -1,11 +1,16 @@
+{% set name = "simage" %}
+{% set version = "1.7.0" %}
+{% set sha256 = "4b57ed3c4997fbcc8b13823a60c1115cd97f701ada8afd44241f8512a5a9adc0" %}
+{% set download_url = "https://github.com/FreeCAD/pivy/releases/download/0.6.3/simage.tar.gz" %}
+
 package:
-    name: simage
-    version: 1.7.0
+    name: {{ name }}
+    version: {{ version }}
 
 source:
-    fn: simage.tar.gz
-    url: https://github.com/FreeCAD/pivy/releases/download/0.6.3/simage.tar.gz
-    sha256: 4b57ed3c4997fbcc8b13823a60c1115cd97f701ada8afd44241f8512a5a9adc0
+    fn: {{ name }}.tar.gz
+    url: {{ download_url }}
+    sha256: {{ sha256 }}
 
 build:
     number: 0
