py36 only package

--- a/recipes/sampledb/meta.yaml
+++ b/recipes/sampledb/meta.yaml
@@ -12,16 +12,16 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  skip: true  # [py<3.6]
 
 requirements:
   build:
-    - python >=3.6
+    - python
     - setuptools
   run:
-    - python >=3.6
+    - python
     - xlrd
     - xlsxwriter
     - pymongo
