py36 only package

--- a/recipes/sampledb/meta.yaml
+++ b/recipes/sampledb/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
-  skip: true  # [py<3.6]
+  skip: true  # [not py36]
 
 requirements:
   build:
