Modified for Papillon v 0.0.9
Fixed the issues indicate in the comments, Papillon v. 0.0.9 include the license.

--- a/recipes/papillon/meta.yaml
+++ b/recipes/papillon/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "papillon" %}
-{% set version = "0.0.8" %}
-{% set sha256 = "7505f977ed053b9eff70ba3a6a0787b227f36c419d8d742e3c74d09ebc7bc9c5" %}
+{% set version = "0.0.9" %}
+{% set sha256 = "f2373de57bec830a5147a82688562dae4942078c07b32498738693c581a3c777" %}
 
 package:
   name: {{ name|lower }}
@@ -12,17 +12,14 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
   number: 0
   skip: True  # [py<35]
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
-    - python --single-version-externally-managed --record record.txt
+    - python
     - setuptools
-    - pandas >=0.17.1
-    - seaborn >=0.8.1
   run:
     - python
     - pandas >=0.17.1
@@ -30,7 +27,7 @@ requirements:
 
 test:
   imports:
-    - papillon.test
+    - papillon
 
 about:
   home: https://github.com/domenico-somma/Papillon/
