--- a/recipes/orange3-imageanalytics/meta.yaml
+++ b/recipes/orange3-imageanalytics/meta.yaml
@@ -25,8 +25,8 @@ requirements:
     - scipy
     - hyper           >=0.7.0
     - numpy           >=1.10.0
-    - Orange3         >=3.3.5
-    - Pillow          >=4.2.1
+    - orange3         >=3.3.5
+    - pillow          >=4.2.1
     - requests
     - cachecontrol
     - lockfile
