add additional requires

--- a/recipes/simdna/meta.yaml
+++ b/recipes/simdna/meta.yaml
@@ -32,6 +32,9 @@ requirements:
     - python
     # When setuptools is available add the `--single-version-externally-managed --record record.txt` above.
     - setuptools
+    - matplotlib
+    - scipy
+    - numpy >= 1.9
     # if your project compiles code (such as a C extension) then add `toolchain` as a build requirement.
   run:
     - python
