--- a/recipes/simdna/meta.yaml
+++ b/recipes/simdna/meta.yaml
@@ -43,11 +43,10 @@ test:
   # Some package might need a `test/commands` key to check CLI.
   # List all the packages/modules that `run_test.py` imports.
   imports:
-    - simplejson
-    - simplejson.tests
+    - simdna
 
 about:
-  home: http://github.com/simplejson/simplejson
+  home: https://github.com/kundajelab/simdna
   # Remember to specify the license variants for BSD, Apache, GPL, and LGLP.
   # Prefer the short version, e.g: GPL-2.0 instead of GNU General Public License version 2.0
   # See https://opensource.org/licenses/alphabetical
