Requires for running

--- a/recipes/simdna/meta.yaml
+++ b/recipes/simdna/meta.yaml
@@ -38,6 +38,10 @@ requirements:
     # if your project compiles code (such as a C extension) then add `toolchain` as a build requirement.
   run:
     - python
+    - setuptools
+    - matplotlib
+    - scipy
+    - numpy >=1.9
 
 test:
   # Some package might need a `test/commands` key to check CLI.
