--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -40,7 +40,7 @@ about:
   license: Apache-2.0
   license_family: Apache
   license_file: COPYING
-  summary: 'Simple, fast, extensible JSON encoder/decoder for Python'
+  summary: 'Fast automatic differentiation library in C++'
   description: |
     Adept (Automatic Differentiation using Expression Templates) is a free C++
     software library that enables algorithms to be automatically differentiated,
