test for both static library and libtool archive

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -30,8 +30,8 @@ test:
     - test -L $PREFIX/lib/libadept.so  # [linux]
     - test -L $PREFIX/lib/libadept.dylib  # [osx]
     - test -f $PREFIX/lib/libadept.so.0.0.0  # [linux]
-    - test -f $PREFIX/lib/libadept.a  # [linux]
-    - test -f $PREFIX/lib/libadept.la  # [osx]
+    - test -f $PREFIX/lib/libadept.a  # [linux or osx]
+    - test -f $PREFIX/lib/libadept.la  # [linux or osx]
     - test -f $PREFIX/lib/libadept.0.dylib  # [osx]
     - test -f $PREFIX/include/adept.h  # [linux or osx]
 
