added noarch and enu34 dependency

--- a/recipes/h2/meta.yaml
+++ b/recipes/h2/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - python
     - hyperframe    >=5.1.0,<6
     - hpack         >=2.3,<4
+    - enum34        >=1.1.6,<2  # [py2k]
 
 test:
   imports:
@@ -39,4 +40,3 @@ about:
 extra:
   recipe-maintainers:
     - primozgodec
-    - astaric
