added noarch and license_family

--- a/recipes/hpack/meta.yaml
+++ b/recipes/hpack/meta.yaml
@@ -13,6 +13,7 @@ source:
 
 build:
   number: 0
+  noarch: python
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
@@ -29,6 +30,7 @@ test:
 about:
   home: http://python-hyper.org/hpack/
   license: MIT
+  license_family: MIT
   license_file: LICENSE
   summary: 'HTTP/2 Header Encoding for Python'
   dev_url: https://github.com/python-hyper/hpack
