Change recipe to new PyPI repo

--- a/recipes/jupyter-widget-pivot-table/meta.yaml
+++ b/recipes/jupyter-widget-pivot-table/meta.yaml
@@ -1,13 +1,13 @@
-{% set version = "0.1.3" %}
-{% set md5 = "7eebff0d6da4fed51cfb143c4dcd0011" %}
+{% set version = "0.1.3a0" %}
+{% set md5 = "ec10c105aabac9101b109475e26faaef" %}
 
 package:
-  name: jupyter-widget-pivot-table
+  name: ipywidget-pivot-table
   version: {{ version }}
 
 source:
-  fn: jupyter-widget-pivot-table-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/j/jupyter_widget_pivot_table/jupyter_widget_pivot_table-{{ version }}.tar.gz
+  fn: ipywidget-pivot-table-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/i/ipywidget_pivot_table/ipywidget_pivot_table-{{ version }}.tar.gz
   md5: {{ md5 }}
 
 build:
@@ -29,13 +29,12 @@ requirements:
 
 test:
     imports:
-        - jupyter_widget_pivot_table
+        - ipywidget_pivot_table
 
 about:
-  home: https://github.com/oscar6echo/jupyter-widget-pivot-table
+  home: https://github.com/PierreMarion23/pivot-table-widget
   license: MIT
   license_family: MIT
-  license_file: LICENSE
   summary: 'A jupyter widget (or ipywidget) wrapping the very convenient pivotTable.js library'
 
   description: |
