--- a/recipes/stopit/meta.yaml
+++ b/recipes/stopit/meta.yaml
@@ -33,6 +33,7 @@ about:
   home: https://pypi.python.org/pypi/stopit
   license: GPL-3.0
   license_family: GPL
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: |
     Raise asynchronous exceptions in other thread, control the timeout of
     blocks or callables with a context manager or a decorator
