added toolchain build requirement and enum34

--- a/recipes/brotlipy/meta.yaml
+++ b/recipes/brotlipy/meta.yaml
@@ -20,9 +20,11 @@ requirements:
     - python
     - setuptools
     - cffi        >=1.0.0
+    - toolchain
   run:
     - python
     - cffi        >=1.0.0
+    - enum34      # [py2k]
 
 test:
   imports:
