added license_file and removed skip

--- a/recipes/lap/meta.yaml
+++ b/recipes/lap/meta.yaml
@@ -14,7 +14,6 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
-  skip: True  # [py2k]
 
 requirements:
   build:
@@ -32,8 +31,9 @@ test:
 about:
   home: https://github.com/gatagat/lap
   license: BSD-2-Clause
-  summary: 'Linear Assignment Problem solver (LAPJV/LAPMOD).'
   license_family: BSD
+  license_file: LICENSE
+  summary: 'Linear Assignment Problem solver (LAPJV/LAPMOD).'
   dev_url: https://github.com/gatagat/lap
 
 extra:
