--- a/recipes/jupyter-widget-pivot-table/meta.yaml
+++ b/recipes/jupyter-widget-pivot-table/meta.yaml
@@ -1,5 +1,5 @@
 {% set version = "0.1.3a0" %}
-{% set md5 = "ec10c105aabac9101b109475e26faaef" %}
+{% set sha256 = "cb04049712197b4fd85f370610d3e2f1caa2ff24ea664ea6e0218308c6220175" %}
 
 package:
   name: ipywidget-pivot-table
@@ -8,7 +8,7 @@ package:
 source:
   fn: ipywidget-pivot-table-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/i/ipywidget_pivot_table/ipywidget_pivot_table-{{ version }}.tar.gz
-  md5: {{ md5 }}
+  sha256: {{ sha256 }}
 
 build:
   number: 0
