--- a/recipes/simage/meta.yaml
+++ b/recipes/simage/meta.yaml
@@ -14,8 +14,7 @@ source:
 
 build:
     number: 0
-    skip: true  # [py<35]
-    skip: true  # [osx]
+    skip: true  # [py<35 or osx]
 
     features:
         - vc14  # [win]
@@ -31,13 +30,14 @@ requirements:
         - gcc  # [linux]
         - cmake
         - qt 5.*
-        - libpng
-        - jpeg
+        - libpng  >=1.6.32,<1.6.35
+        - jpeg  9*
     run:
         - vc 14  # [win]
         - libgcc  # [linux]
-        - libpng
         - qt 5.*
+        - libpng  >=1.6.32,<1.6.35
+        - jpeg  9*
 
 test:
     requires:
