pin boost to 1.66

--- a/recipes/coin3d/meta.yaml
+++ b/recipes/coin3d/meta.yaml
@@ -25,11 +25,11 @@ requirements:
         - vc 14  # [win]
         - gcc  # [linux]
         - cmake
-        - boost-cpp
+        - boost-cpp  1.66.0
     run:
         - vc 14  # [win]
         - libgcc  # [linux]
-        - boost-cpp
+        - boost-cpp  1.66.0
 
 test:
     requires:
