address review comments

--- a/recipes/send2trash/meta.yaml
+++ b/recipes/send2trash/meta.yaml
@@ -24,8 +24,6 @@ requirements:
     - python
 
 test:
-  requires:
-    - python
   imports:
     - send2trash
   commands:
@@ -36,7 +34,7 @@ about:
   home: https://github.com/hsoft/send2trash
   license: BSD-3-Clause
   license_family: BSD
-  license_file: '{{ RECIPE_DIR }}/LICENSE'
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: Python library to natively send files to Trash (or Recycle bin) on all platforms.
 
 extra:
