add toolchain, fix numpy build reqs

--- a/recipes/lap/meta.yaml
+++ b/recipes/lap/meta.yaml
@@ -19,10 +19,13 @@ requirements:
   build:
     - python
     - setuptools
-    - numpy      >=1.10.1
+    - toolchain
+    - numpy 1.10.*,>=1.10.1  # [not (win and py36)]
+    - numpy 1.11.*           # [win and py36]
   run:
     - python
-    - scipy
+    - numpy >=1.10.1  # [not (win and py36)]
+    - numpy >=1.11    # [win and py36]
 
 test:
   imports:
