--- a/recipes/orange3-imageanalytics/meta.yaml
+++ b/recipes/orange3-imageanalytics/meta.yaml
@@ -15,6 +15,7 @@ build:
   number: 0
   skip: True  # [py2k]
   script: python setup.py install --single-version-externally-managed --record record.txt
+  preserve_egg_dir: True
 
 requirements:
   build:
