Fix test command

--- a/recipes/pytest-watch/meta.yaml
+++ b/recipes/pytest-watch/meta.yaml
@@ -33,7 +33,7 @@ test:
   imports:
     - pytest_watch
   commands:
-    - ptw
+    - ptw -V
 
 about:
   home: http://github.com/joeyespo/pytest-watch
