Skip win32 build
Seems that conda-build has issues with ".exe.manifest" files generated
for the package entry_points in win32, when using noarhc.

Ignoring win32 build for now till find a solution for conda-build #2619

--- a/recipes/pytest-watch/meta.yaml
+++ b/recipes/pytest-watch/meta.yaml
@@ -12,8 +12,9 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
   number: 0
+  # Skip build on win32 untill we have a solution for conda-build issue #2619
+  skip: True  # [win32]
   script: python setup.py install --single-version-externally-managed --record record.txt
   entry_points:
     - pytest-watch = pytest_watch:main
