Add versions to run requirements
Review from @synapticarbors

--- a/recipes/pytest-watch/meta.yaml
+++ b/recipes/pytest-watch/meta.yaml
@@ -25,10 +25,11 @@ requirements:
     - python
     - setuptools
   run:
-    - pytest
-    - docopt
-    - colorama
-    - watchdog
+    - python
+    - pytest >= 2.6.4
+    - docopt >= 0.6.2
+    - colorama >= 0.3.3
+    - watchdog >= 0.6.0
 
 test:
   imports:
