Added some test imports

--- a/recipes/scikit-surprise/meta.yaml
+++ b/recipes/scikit-surprise/meta.yaml
@@ -32,6 +32,10 @@ requirements:
 test:
   imports:
     - surprise
+    - surprise.prediction_algorithms
+    - surprise.similarities
+    - surprise.dataset
+    - surprise.evaluate
 
 about:
   home: http://surpriselib.com
