Added tests files for pytest

--- a/recipes/scikit-surprise/meta.yaml
+++ b/recipes/scikit-surprise/meta.yaml
@@ -30,6 +30,12 @@ requirements:
     - six
 
 test:
+  files:
+    tests/*
+  requires:
+    - pytest
+  commands:
+    - pytest
   imports:
     - surprise
     - surprise.prediction_algorithms
