use toolchain, delete patch

--- a/recipes/coin3d/meta.yaml
+++ b/recipes/coin3d/meta.yaml
@@ -12,15 +12,13 @@ source:
     url: {{ download_url }}
     sha256: {{ sha256 }}
 
-    patches:
-        - include.patch
-
 build:
     number: 0
     skip: true  # [py<35]
 
 requirements:
     build:
+        - toolchain
         - ninja  # [win]
         - vc 14  # [win]
         - gcc  # [linux]
