--- a/recipes/simage/meta.yaml
+++ b/recipes/simage/meta.yaml
@@ -14,17 +14,12 @@ source:
 
 build:
     number: 0
-    skip: true  # [py<35 or osx]
-
-    features:
-        - vc14  # [win]
-
-    track_features:
-        - vc14  # [win]
+    skip: true  # [(win and py<35) or osx]
 
 requirements:
     build:
         - toolchain
+        - python # [win]
         - vc 14  # [win]
         - ninja  # [win]
         - gcc  # [linux]
