Require ninja for windows

--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - cmake >=3.4.3
 
     - system  # [linux and not armv7l]
+    - ninja  # [win32 or win64]
 
     # "compiling .pyc files" fails without this:
     - python
