--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,11 @@ script:
         echo "Creating feedstocks from the recipe(s).";
         git config --global user.name "Travis-CI on github.com/conda-forge/staged-recipes";
         git config --global user.email "conda-forge@googlegroups.com";
-        source ./.CI/create_feedstocks || {
-            python .CI/trigger_travis_build.py "conda-forge/staged-recipes"; exit 1;
+        source ./.travis_scripts/create_feedstocks || {
+            python .travis_scripts/trigger_travis_build.py "conda-forge/staged-recipes"; exit 1;
         };
       else
         echo "Building all recipes.";
-        source ./.CI/build_all;
+        source ./.travis_scripts/build_all;
       fi
 
