--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -1,6 +1,6 @@
 {% set version = "5.0" %}
 {% set sha256 = "d60b7151ae41a496132e28f1b40fc068c3a3ca99d729a0331235eac8987117f5" %}
-{% set commit = "c9b520a36641d09f00c7ee079353a1af19e4c707"}
+{% set commit = "c9b520a36641d09f00c7ee079353a1af19e4c707" %}
 
 package:
   name: lldb
