--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -17,26 +17,32 @@ build:
   features:   # [win and py35]
     - vc14    # [win and py35]
 
+build:
+  number: {{ build_number }}
+  skip: true  # [py<36 or osx]
+
+  features:
+    - flang
+    - vc14    # [win and py36]
+
 requirements:
   build:
     - toolchain
     - cmake >=3.4.3
+    
+    - ninja  # [win32 or win64]
 
     - system  # [linux and not armv7l]
-    - ninja  # [win32 or win64]
 
     # "compiling .pyc files" fails without this:
     - python
 
     - llvmdev =={{ version }}
     - clangdev =={{ version }}
-    - libxml2
+    - libxml2 2.9.*
 
   run:
-    - system  # [linux and not armv7l]
-    - llvmdev =={{ version }}
-    - clangdev =={{ version }}
-    - libxml2
+    - vs2015_runtime  # [win]
 
 test:
   requires:
