--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -32,6 +32,7 @@ requirements:
     - llvmdev =={{ version }}
     - clangdev =={{ version }}
     - libxml2 2.9.*
+    - swig
 
   run:
     - vs2015_runtime  # [win]
