--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -33,6 +33,7 @@ requirements:
     - clangdev =={{ version }}
     - libxml2 2.9.*
     - swig
+    - libedit  # [linux]
 
   run:
     - vs2015_runtime  # [win]
