Add run requirements

--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -38,6 +38,10 @@ requirements:
   run:
     - vs2015_runtime  # [win]
 
+    - llvmdev =={{ version }}
+    - clangdev =={{ version }}
+    - libedit  # [linux]
+
 test:
   requires:
     - python {{ environ['PY_VER'] + '*' }}  # [win]
