--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -21,26 +21,20 @@ requirements:
   build:
     - toolchain
     - cmake >=3.4.3
-    
-    - ninja  # [win32 or win64]
-
-    - system  # [linux and not armv7l]
-
+    - ninja    # [win]
     # "compiling .pyc files" fails without this:
     - python
-
     - llvmdev =={{ version }}
     - clangdev =={{ version }}
     - libxml2 2.9.*
     - swig
     - libedit  # [linux]
-
+    - vc 14    # [win]
   run:
-    - vs2015_runtime  # [win]
-
+    - libedit  # [linux]
+    - vc 14    # [win]
     - llvmdev =={{ version }}
     - clangdev =={{ version }}
-    - libedit  # [linux]
 
 test:
   requires:
