Use official source and patch for windows

--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -1,6 +1,5 @@
-{% set version = "5.0" %}
-{% set sha256 = "d60b7151ae41a496132e28f1b40fc068c3a3ca99d729a0331235eac8987117f5" %}
-{% set commit = "c9b520a36641d09f00c7ee079353a1af19e4c707" %}
+{% set version = "5.0.0" %}
+{% set sha256 = "c0a0ca32105e9881d86b7ca886220147e686edc97fdb9f3657c6659dc6568b7d" %}
 
 package:
   name: lldb
@@ -8,8 +7,10 @@ package:
 
 source:
   fn: lldb-{{ version }}.src.tar.xz
-  url: https://github.com/llvm-mirror/lldb/archive/{{ commit }}.tar.gz
+  url: http://releases.llvm.org/{{ version }}/lldb-{{ version }}.src.tar.xz
   sha256: {{ sha256 }}
+  patches:
+    - build_external.patch
 
 build:
   number: 0
