Add python as a runtime dependency as there is a python module

--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   number: 0
-  skip: true  # [py<36 or osx]
+  skip: true  # [win and py<35]
   features:
     - vc14    # [win and py36]
 
@@ -36,6 +36,7 @@ requirements:
     - vc 14    # [win]
     - llvmdev =={{ version }}
     - clangdev =={{ version }}
+    - python
 
 test:
   requires:
