--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -23,7 +23,6 @@ requirements:
     - toolchain
     - cmake >=3.4.3
     - ninja    # [win]
-    # "compiling .pyc files" fails without this:
     - python
     - llvmdev =={{ version }}
     - clangdev =={{ version }}
@@ -44,7 +43,7 @@ test:
     - cmake >=3.4.3
 
   commands:
-    - $PREFIX/bin/lldb --version  # [unix]
+    - lldb --version  # [unix]
 
 about:
   home: http://llvm.org/
