--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -16,7 +16,7 @@ build:
   number: 0
   skip: true  # [win and py<35]
   features:
-    - vc14    # [win and py36]
+    - vc14    # [win and py>=35]
 
 requirements:
   build:
