Run version check on all platforms

--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -43,7 +43,7 @@ test:
     - cmake >=3.4.3
 
   commands:
-    - lldb --version  # [unix]
+    - lldb --version
 
 about:
   home: http://llvm.org/
