Require libcxx for osx

--- a/recipes/lldb/meta.yaml
+++ b/recipes/lldb/meta.yaml
@@ -30,9 +30,11 @@ requirements:
     - swig
     - libedit  # [linux]
     - vc 14    # [win]
+    - libcxx   # [osx]
   run:
     - libedit  # [linux]
     - vc 14    # [win]
+    - libcxx   # [osx]
     - llvmdev =={{ version }}
     - clangdev =={{ version }}
     - python
