use sources from bitbucket

--- a/recipes/coin3d/meta.yaml
+++ b/recipes/coin3d/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "coin3d" %}
 {% set version = "4.0.0" %}
+{% set commit = "8e8337f61b05" %}
 {% set sha256 = "8319cfa699afac0e5f19054222c25a7ad655f018f7c3c7b53f626e7b167cb08e" %}
-{% set download_url = "https://github.com/FreeCAD/pivy/releases/download/0.6.3/Coin3D-coin-8e8337f61b05.tar.gz" %}
 
 package:
     name: {{ name }}
@@ -9,7 +9,7 @@ package:
 
 source:
     fn: {{ name }}.tar.gz
-    url: {{ download_url }}
+    url: https://bitbucket.org/Coin3D/coin/get/{{ commit }}.tar.gz
     sha256: {{ sha256 }}
 
 build:
