--- a/recipes/simage/meta.yaml
+++ b/recipes/simage/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "simage" %}
 {% set version = "1.7.0" %}
-{% set sha256 = "4b57ed3c4997fbcc8b13823a60c1115cd97f701ada8afd44241f8512a5a9adc0" %}
-{% set download_url = "https://github.com/FreeCAD/pivy/releases/download/0.6.3/simage.tar.gz" %}
+{% set commit = "cf953eacd849" %}
+{% set sha256 = "a214e75cfb1f20554c748578d4fdcca9bfaf004bc51e073cafe68b72b1a864a8" %}
 
 package:
     name: {{ name }}
@@ -9,7 +9,7 @@ package:
 
 source:
     fn: {{ name }}.tar.gz
-    url: {{ download_url }}
+    url: https://bitbucket.org/Coin3D/simage/get/{{ commit }}.tar.gz
     sha256: {{ sha256 }}
 
 build:
