--- a/recipes/easywatch/meta.yaml
+++ b/recipes/easywatch/meta.yaml
@@ -10,6 +10,11 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    # This trivial change to use a relative import for python 3 was merged on
+    # master years ago, but never put in a release version:
+    # https://github.com/Ceasar/easywatch/pull/6
+    - import.patch
 
 build:
   noarch: python
