fix homepage url
Copy-pasted from a typo on PyPI....

--- a/recipes/staticjinja/meta.yaml
+++ b/recipes/staticjinja/meta.yaml
@@ -35,7 +35,7 @@ test:
     - staticjinja --help
 
 about:
-  home: http://github.com/Caesar/staticjinja
+  home: http://github.com/Ceasar/staticjinja
   license: MIT
   license_family: MIT
   # https://github.com/Ceasar/staticjinja/pull/80
@@ -53,7 +53,7 @@ about:
 
     staticjinja is designed to be lightweight, easy-to-use, and highly
     extensible, enabling you to focus on simply making your site.
-  dev_url: http://github.com/Caesar/staticjinja
+  dev_url: http://github.com/Ceasar/staticjinja
 
 extra:
   recipe-maintainers:
