add include.patch (again)

--- a/recipes/coin3d/meta.yaml
+++ b/recipes/coin3d/meta.yaml
@@ -12,6 +12,9 @@ source:
     url: https://bitbucket.org/Coin3D/coin/get/{{ commit }}.tar.gz
     sha256: {{ sha256 }}
 
+    patches:
+	- include.patch  # [osx]
+
 build:
     number: 0
     skip: true  # [py<35]
