--- a/recipes/simage/meta.yaml
+++ b/recipes/simage/meta.yaml
@@ -41,7 +41,7 @@ test:
     files:
         - CMakeLists.txt  # [unix]
     commands:
-        - where /r "%PREFIX%"  simage.dll  # [win]
+        - where /r "%PREFIX%"  simage1.dll  # [win]
 
 about:
     home: https://bitbucket.org/Coin3D/simage
