Fixed name of dateutil package

--- a/recipes/libcomcat/meta.yaml
+++ b/recipes/libcomcat/meta.yaml
@@ -19,7 +19,7 @@ requirements:
     - pip
   run:
     - python
-    - dateutil >=2.4.1
+    - python-dateutil >=2.4.1
     - numpy >=1.0
     - pandas >=0.8.1
     - xlrd >=0.9.4
