--- a/recipes/dulwich/meta.yaml
+++ b/recipes/dulwich/meta.yaml
@@ -22,7 +22,7 @@ build:
   # Uncomment the following line if the package is pure python and the recipe is exactly the same for all platforms.
   # See https://conda-forge.org/docs/meta.html#building-noarch-packages for more details.
   # noarch: python
-  number: 0
+  number: 1
   # If the installation is complex, or different between Unix and Windows, use separate bld.bat and build.sh files instead of this key.
   # By default, the package will be built for the Python versions supported by conda-forge and for all major OSs.
   # Add the line "skip: True  # [py<35]" (for example) to limit to Python 3.5 and newer, or "skip: True  # [not win]" to limit to Windows.
@@ -78,7 +78,7 @@ about:
   # It is strongly encouraged to include a license file in the package,
   # (even if the license doesn't require it) using the license_file entry.
   # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
-  license_file: LICENSE.txt
+  license_file: CONTRIBUTING.md
   summary: 'Python Git Library'
 
   # The remaining entries in this section are optional, but recommended
