--- a/recipes/sqlobject/meta.yaml
+++ b/recipes/sqlobject/meta.yaml
@@ -13,14 +13,13 @@ source:
 
 build:
   number: 0
+  noarch: python
   script: python setup.py install  --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
     - python
     - setuptools
-    - formencode >=1.3.1
-    - pydispatcher >=2.0.4
   run:
     - python
     - setuptools
@@ -51,8 +50,11 @@ test:
 about:
   home: http://sqlobject.org/
   license: LGPL-2.1
+  license_file: LICENSE
   summary: 'Object-Relational Manager, aka database wrapper'
+  dev_url: https://github.com/sqlobject/sqlobject
 
 extra:
   recipe-maintainers:
     - windelbouwmanbosch
+    - windelbouwman
