Adjust and relocate build command

--- a/recipes/ndcube/meta.yaml
+++ b/recipes/ndcube/meta.yaml
@@ -10,7 +10,8 @@ source:
    # List any patch files here
    # - fix.patch
 
-# build:
+build:
+  script: python setup.py install --offline --no-git --single-version-externally-managed --record record.txt
   # noarch: python
   # preserve_egg_dir: True
   # entry_points:
