Add maintainers section

--- a/recipes/ndcube/meta.yaml
+++ b/recipes/ndcube/meta.yaml
@@ -66,6 +66,6 @@ about:
   summary: 'A base package for multi-dimensional contiguious and non-contiguious spatially aware arrays.'
   license_family: BSD
 
-# See
-# http://docs.continuum.io/conda/build.html for
-# more information about meta.yaml
+extra:
+  recipe-maintainers:
+    - SolarDrew
