--- a/recipes/xpdsim/meta.yaml
+++ b/recipes/xpdsim/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "xpdsim" %}
-{% set version = "v0.1" %}
+{% set version = "0.1.1" %}
 {% set sha256 = "8124605bd27f57d47227c68373734a7de03ae6a2d8baddb0f95d0e7df1176972" %}
 
 package:
