--- a/recipes/simdna/meta.yaml
+++ b/recipes/simdna/meta.yaml
@@ -1,41 +1,25 @@
-# Note: there are many handy hints in comments in this example -- remove them when you've finalized your recipe
-
-# Jinja variables help maintain the recipe as you'll update the version only here.
 {% set name = "simdna" %}
-{% set version = "0.0.0.deepchem" %}
-{% set git_tag = "197da84" %}
-# sha256 is the prefered checksum -- you can get it for a file with:
-#  `openssl sha256 <file name>`.
-# You may need the openssl package, available on conda-forge
-#  `conda install openssl -c conda-forge``
+{% set version = "0.4.2" %}
+{% set sha256 = "0b16876b90a8628afc145a3b197017b134374da479e20d72c63fda2a30102c09" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  git_url: https://github.com/deepchem/simdna.git
-  git_tag: {{ git_tag }}
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
-  # Uncomment the following line if the package is pure python and the recipe is exactly the same for all platforms.
-  # See https://conda-forge.org/docs/meta.html#building-noarch-packages for more details.
-  # noarch: python
+  noarch: python
   number: 0
-  # If the installation is complex, or different between Unix and Windows, use separate bld.bat and build.sh files instead of this key.
-  # By default, the package will be built for the Python versions supported by conda-forge and for all major OSs.
-  # Add the line "skip: True  # [py<35]" (for example) to limit to Python 3.5 and newer, or "skip: True  # [not win]" to limit to Windows.
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
     - python
-    # When setuptools is available add the `--single-version-externally-managed --record record.txt` above.
     - setuptools
-    - matplotlib
-    - scipy
-    - numpy >=1.9
-    # if your project compiles code (such as a C extension) then add `toolchain` as a build requirement.
   run:
     - python
     - setuptools
@@ -44,26 +28,15 @@ requirements:
     - numpy >=1.9
 
 test:
-  # Some package might need a `test/commands` key to check CLI.
-  # List all the packages/modules that `run_test.py` imports.
   imports:
     - simdna
 
 about:
   home: https://github.com/kundajelab/simdna
-  # Remember to specify the license variants for BSD, Apache, GPL, and LGLP.
-  # Prefer the short version, e.g: GPL-2.0 instead of GNU General Public License version 2.0
-  # See https://opensource.org/licenses/alphabetical
   license: MIT
-  # The license_family, i.e. "BSD" if license is "BSD-3-Clause". (optional)
   license_family: MIT
-  # It is strongly encouraged to include a license file in the package,
-  # (even if the license doesn't require it) using the license_file entry.
-  # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
-  license_file: LICENSE
   summary: 'Simulated datasets of DNA'
 
-  # The remaining entries in this section are optional, but recommended
   description: |
     Simulated datasets of DNA
   doc_url: https://kundajelab.github.io/simdna/
@@ -71,6 +44,4 @@ about:
 
 extra:
   recipe-maintainers:
-    # GitHub IDs for maintainers of the recipe.
-    # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
     - lilleswing
