--- a/recipes/dulwich/meta.yaml
+++ b/recipes/dulwich/meta.yaml
@@ -1,13 +1,6 @@
-# Note: there are many handy hints in comments in this example -- remove them when you've finalized your recipe
-
-# Jinja variables help maintain the recipe as you'll update the version only here.
 {% set name = "dulwich" %}
 {% set version = "0.18.6" %}
 {% set sha256 = "38a04406bc68315794c3bab37c7d4ed137fb8a839482d8894e72b0d9b3eb41a9" %}
-# sha256 is the prefered checksum -- you can get it for a file with:
-#  `openssl sha256 <file name>`.
-# You may need the openssl package, available on conda-forge
-#  `conda install openssl -c conda-forge``
 
 package:
   name: {{ name|lower }}
@@ -19,69 +12,52 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  # Uncomment the following line if the package is pure python and the recipe is exactly the same for all platforms.
-  # See https://conda-forge.org/docs/meta.html#building-noarch-packages for more details.
-  # noarch: python
-  number: 1
-  # If the installation is complex, or different between Unix and Windows, use separate bld.bat and build.sh files instead of this key.
-  # By default, the package will be built for the Python versions supported by conda-forge and for all major OSs.
-  # Add the line "skip: True  # [py<35]" (for example) to limit to Python 3.5 and newer, or "skip: True  # [not win]" to limit to Windows.
+  number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
     - python
-    # When setuptools is available add the `--single-version-externally-managed --record record.txt` above.
     - setuptools
-    # if your project compiles code (such as a C extension) then add `toolchain` as a build requirement.
     - toolchain
   run:
     - python
 
 test:
-  # Some package might need a `test/commands` key to check CLI.
-  # List all the packages/modules that `run_test.py` imports.
   imports:
     - dulwich
     - dulwich.tests
-    - dulwich.archive
-    - dulwich.object_store
-    - dulwich.objects
+    - dulwich.tests.compat
     - dulwich.tests.utils
-    - dulwich.repo
+    - dulwich.archive
     - dulwich.client
     - dulwich.config
-    - dulwich.protocol
-    - dulwich.pack
     - dulwich.diff_tree
-    - dulwich.index
-    - dulwich.file
     - dulwich.errors
+    - dulwich.file
     - dulwich.hooks
     - dulwich.ignore
+    - dulwich.index
+    - dulwich.object_store
+    - dulwich.objects
     - dulwich.objectspec
+    - dulwich.pack
     - dulwich.patch
+    - dulwich.protocol
     - dulwich.reflog
     - dulwich.refs
+    - dulwich.repo
     - dulwich.server
     - dulwich.walk
     - dulwich.web
 
 about:
   home: https://www.dulwich.io/
-  # Remember to specify the license variants for BSD, Apache, GPL, and LGLP.
-  # Prefer the short version, e.g: GPL-2.0 instead of GNU General Public License version 2.0
-  # See https://opensource.org/licenses/alphabetical
-  license: Apache
-  # The license_family, i.e. "BSD" if license is "BSD-3-Clause". (optional)
+  license: Apache-2.0
   license_family: Apache
-  # It is strongly encouraged to include a license file in the package,
-  # (even if the license doesn't require it) using the license_file entry.
-  # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
-  license_file: CONTRIBUTING.md
+  license_file: COPYING
   summary: 'Python Git Library'
 
-  # The remaining entries in this section are optional, but recommended
   description: |
     Python implementation of the Git file formats and protocols, without the need to have git installed.
     All functionality is available in pure Python. Optional C extensions can be built for improved performance.
@@ -91,7 +67,4 @@ about:
 
 extra:
   recipe-maintainers:
-    # GitHub IDs for maintainers of the recipe.
-    # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
     - mikofski
-    - jelmer
