fix typo: htps -> https

--- a/recipes/fastimport/meta.yaml
+++ b/recipes/fastimport/meta.yaml
@@ -38,7 +38,7 @@ about:
   description: |
     This package provides a parser for and generator of the Git fastimport format.
   doc_url: https://www.kernel.org/pub/software/scm/git/docs/git-fast-import.html
-  dev_url: htps://github.com/jelmer/python-fastimport
+  dev_url: https://github.com/jelmer/python-fastimport
 
 extra:
   recipe-maintainers:
