--- a/recipes/ndcube/meta.yaml
+++ b/recipes/ndcube/meta.yaml
@@ -4,7 +4,7 @@ package:
 
 source:
   fn: ndcube-0.1.dev273.tar.gz
-  url: https://pypi.python.org/packages/21/e7/32f31309c75a064277babcdca88d6bb5dadefaea000303c61e177beba4d2/ndcube-0.1.dev273.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   md5: 36a200f32aa1ec697e1f0f0b8e6d4391
 
 build:
