tensorboardx: Add more import tests

--- a/recipes/tensorboardx/meta.yaml
+++ b/recipes/tensorboardx/meta.yaml
@@ -28,6 +28,15 @@ requirements:
 test:
   imports:
     - tensorboardX
+    - tensorboardX.crc32c
+    - tensorboardX.embedding
+    - tensorboardX.event_file_writer
+    - tensorboardX.graph
+    - tensorboardX.graph_onnx
+    - tensorboardX.record_writer
+    - tensorboardX.summary
+    - tensorboardX.writer
+    - tensorboardX.x2num
 
 about:
   home: https://github.com/lanpa/tensorboard-pytorch
