Switch some things for template variables

--- a/recipes/ndcube/meta.yaml
+++ b/recipes/ndcube/meta.yaml
@@ -1,11 +1,15 @@
+{% set name = "ndcube" %}
+{% set version = "0.1.dev273" %}
+{% set md5 = "36a200f32aa1ec697e1f0f0b8e6d4391" %}
+
 package:
-  name: ndcube
-  version: "0.1.dev273"
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  fn: ndcube-0.1.dev273.tar.gz
+  fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  md5: 36a200f32aa1ec697e1f0f0b8e6d4391
+  md5: md5
 
 build:
   script: python setup.py install --offline --no-git --single-version-externally-managed --record record.txt
