--- a/recipes/ndcube/meta.yaml
+++ b/recipes/ndcube/meta.yaml
@@ -39,6 +39,7 @@ about:
   license: BSD-2-Clause
   summary: 'A base package for multi-dimensional contiguious and non-contiguious spatially aware arrays.'
   license_family: BSD
+  dev_url: https://github.com/sunpy/ndcube
 
 extra:
   recipe-maintainers:
