Package license file manually and link to PR to include it in source

--- a/recipes/ndcube/meta.yaml
+++ b/recipes/ndcube/meta.yaml
@@ -36,7 +36,9 @@ test:
 
 about:
   home: http://sunpy.org
+  # License file will be included in source when https://github.com/sunpy/ndcube/pull/37 is merged
   license: BSD-2-Clause
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'A base package for multi-dimensional contiguious and non-contiguious spatially aware arrays.'
   license_family: BSD
   dev_url: https://github.com/sunpy/ndcube
