--- a/recipes/ndcube/meta.yaml
+++ b/recipes/ndcube/meta.yaml
@@ -12,6 +12,7 @@ source:
   md5: md5
 
 build:
+  number: 0
   script: python setup.py install --offline --no-git --single-version-externally-managed --record record.txt
 
 requirements:
