--- a/recipes/simdna/meta.yaml
+++ b/recipes/simdna/meta.yaml
@@ -34,6 +34,7 @@ test:
 about:
   home: https://github.com/kundajelab/simdna
   license: MIT
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   license_family: MIT
   summary: 'Simulated datasets of DNA'
 
