Force CI rerun after github went down

--- a/recipes/simdna/meta.yaml
+++ b/recipes/simdna/meta.yaml
@@ -38,7 +38,7 @@ about:
   license_family: MIT
   summary: 'Simulated datasets of DNA'
   description: |
-    Simulated datasets of DNA
+    Simulated datasets of DNA.
   doc_url: https://kundajelab.github.io/simdna/
   dev_url: https://kundajelab.github.io/simdna/
 
