Switch to using sha256

--- a/recipes/ndcube/meta.yaml
+++ b/recipes/ndcube/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "ndcube" %}
 {% set version = "0.1.dev273" %}
-{% set md5 = "36a200f32aa1ec697e1f0f0b8e6d4391" %}
+{% set sha256 = "0dbb33ce21de604f0f9c78ea4ce8348f9e8b05855de58cbd8152ea6e68f9543b" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +9,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  md5: {{ md5 }}
+  sha256: {{ sha256 }}
 
 build:
   number: 0
