--- a/recipes/fastimport/meta.yaml
+++ b/recipes/fastimport/meta.yaml
@@ -29,7 +29,7 @@ test:
     - fastimport.processors
 
 about:
-  home: htps://github.com/jelmer/python-fastimport
+  home: https://github.com/jelmer/python-fastimport
   license: GPL-2.0
   license_family: GPL
   license_file: COPYING
