--- a/recipes/xpdtools/meta.yaml
+++ b/recipes/xpdtools/meta.yaml
@@ -15,6 +15,8 @@ build:
   noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  entry_points:
+    image_to_iq = xpdtools.cli.process_tiff:run_main
 
 requirements:
   build:
