mdsplus: Fix sha256 line and version format per review comments [skip appveyor]

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -1,14 +1,13 @@
 {% set name = "mdsplus" %}
-{% set version = "stable_release-7-7-9" %}
-{% set sha256 = "5b54e4f7bb00afee7ca9ad0fd7f5fda69afe39c817f68c7739939b1415f05008
-" %}
+{% set version = "7.7.9" %}
+{% set sha256 = "5b54e4f7bb00afee7ca9ad0fd7f5fda69afe39c817f68c7739939b1415f05008" %}
 package:
   name: {{ name|lower }}
-  version: {{ version | replace('-','.') }}
+  version: {{ version }}
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/MDSplus/{{ name }}/archive/{{ version }}.tar.gz
+  url: https://github.com/MDSplus/{{ name }}/archive/stable_release-{{ version | replace('.','-') }}.tar.gz
   sha256: {{ sha256 }}
   patches:
     - configure.patch.osx  # [osx]
