--- a/recipes/xpdtools/meta.yaml
+++ b/recipes/xpdtools/meta.yaml
@@ -16,7 +16,7 @@ build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
   entry_points:
-    image_to_iq = xpdtools.cli.process_tiff:run_main
+    - image_to_iq = xpdtools.cli.process_tiff:run_main
 
 requirements:
   build:
@@ -34,6 +34,7 @@ requirements:
     - pims
     - fabio
     - numba
+    - matplotlib
 
 
 test:
